# okapi

./: Cargo.toml
okapi/src/: openapi3.rs
