[workspace]
members = [
    "okapi",
    "rocket-okapi",
    "rocket-okapi-codegen",
    "examples/json-web-api",
    "examples/custom_schema",
    "examples/uuid",
    "examples/special-types",
    "examples/secure_request_guard",
    "examples/streams",
    "examples/dyn_templates",
]

[patch.crates-io.schemars]
git = "https://github.com/Seatlab-dev/schemars.git"
rev = "df322feb675a194b62ddd449deb6c731417052b6"
