[workspace]
members = [
    "okapi",
    "rocket-okapi",
    "rocket-okapi-codegen",
    "examples/json-web-api",
    "examples/custom_schema",
    "examples/uuid",
    "examples/special-types",
    "examples/secure_request_guard",
    "examples/streams",
    "examples/dyn_templates",
]

[patch.crates-io.schemars]
git = "https://github.com/Seatlab-dev/schemars.git"
rev = "57ffb49"
